2012-10-16  Kent Tamura  <tkent@chromium.org>

        Move tests for calendar picker to platform/chromium/fast/forms/calendar-picker/
        https://bugs.webkit.org/show_bug.cgi?id=98103

        Reviewed by Yuta Kitamura.

        Move tests for calendar picker to platform/chromium/fast/forms/
        calendar-picker/ because
         - Ease of skipping
         - We're going to support non-date types in the calendar picker.
         - Not sure the calendar picker code will be used on other platforms.

        * fast/forms/date/calendar-picker-appearance-expected.txt: Removed.
        * fast/forms/date/calendar-picker-appearance-pre-100-expected.txt: Removed.
        * fast/forms/date/calendar-picker-appearance-pre-100.html: Removed.
        * fast/forms/date/calendar-picker-appearance.html: Removed.
        * fast/forms/date/calendar-picker-common.js: Removed.
        * fast/forms/date/calendar-picker-key-operations-expected.txt: Removed.
        * fast/forms/date/calendar-picker-key-operations.html: Removed.
        * fast/forms/date/calendar-picker-mouse-operations-expected.txt: Removed.
        * fast/forms/date/calendar-picker-mouse-operations.html: Removed.
        * fast/forms/date/calendar-picker-type-change-onclick-expected.txt: Removed.
        * fast/forms/date/calendar-picker-type-change-onclick.html: Removed.
        * fast/forms/date/calendar-picker-with-step-expected.txt: Removed.
        * fast/forms/date/calendar-picker-with-step.html: Removed.
        * platform/chromium-linux-x86/fast/forms/date/calendar-picker-appearance-expected.png: Removed.
        * platform/chromium-linux-x86/platform/chromium/fast/forms/calendar-picker: Added.
        * platform/chromium-linux-x86/platform/chromium/fast/forms/calendar-picker/calendar-picker-appearance-expected.png: Copied from LayoutTests/platform/chromium-linux-x86/fast/forms/date/calendar-picker-appearance-expected.png.