@@ -1,0 +1,10 @@
+Check if we have no crash in a case that the input type is changed by clicking the calendar picker indicator.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS unless crash or assertion failure
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
